WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
92115
REGRESSION (
r109451
): Overlay scrollbars always use the default style, regardless of background color
https://bugs.webkit.org/show_bug.cgi?id=92115
Summary
REGRESSION (r109451): Overlay scrollbars always use the default style, regard...
mitz
Reported
2012-07-24 07:32:43 PDT
REGRESSION (
r109451
): Overlay scrollbars always use the default style, regardless of background color
Attachments
Reverse an incorrect null check in Scrollbar::scrollbarOverlayStyle
(1.31 KB, patch)
2012-07-24 07:35 PDT
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-07-24 07:33:20 PDT
<
rdar://problem/11945102
>
mitz
Comment 2
2012-07-24 07:35:55 PDT
Created
attachment 154057
[details]
Reverse an incorrect null check in Scrollbar::scrollbarOverlayStyle
mitz
Comment 3
2012-07-24 09:18:36 PDT
Fixed in <
http://trac.webkit.org/r123486
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug