<rdar://problem/11945102> REGRESSION (r109451): Overlay scrollbars always use the default style, regardless of background color https://bugs.webkit.org/show_bug.cgi?id=92115

Reviewed by Mark Rowe.

* platform/Scrollbar.cpp:
(WebCore::Scrollbar::scrollbarOverlayStyle): Reversed an incorrect null check.



Canonical link: https://commits.webkit.org/109936@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123486 268f45cc-cd09-0410-ab3c-d52691b4dbfc